# dependency-tree-generator

./: Cargo.toml  data.txt  tree.html
src/: main.rs  tree.rs
